@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>543</width>
-    <height>515</height>
+    <height>527</height>
    </rect>
   </property>
   <property name="windowIcon" >
@@ -497,11 +497,49 @@
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="scaletempo_check" >
-            <property name="text" >
-             <string>High speed &amp;playback without altering pitch</string>
+           <layout class="QHBoxLayout" >
+            <property name="margin" >
+             <number>0</number>
             </property>
-           </widget>
+            <property name="spacing" >
+             <number>6</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="label_6" >
+              <property name="text" >
+               <string>High speed &amp;playback without altering pitch</string>
+              </property>
+              <property name="buddy" >
+               <cstring>scaletempo_combo</cstring>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="TristateCombo" name="scaletempo_combo" >
+              <property name="sizePolicy" >
+               <sizepolicy>
+                <hsizetype>5</hsizetype>
+                <vsizetype>0</vsizetype>
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer>
+              <property name="orientation" >
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" >
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </item>
           <item>
            <layout class="QHBoxLayout" >
@@ -862,6 +900,11 @@ For translators: don't translate this text, it will be replaced with another one
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>TristateCombo</class>
+   <extends>QComboBox</extends>
+   <header>tristatecombo.h</header>
+  </customwidget>
   <customwidget>
    <class>MyComboBox</class>
    <extends>QComboBox</extends>
